# AIbum-core

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux.yml  wasm.yml  windows-mingw.yml  windows-msvc.yml
include/: FaceNet.hpp  Image.hpp  ImageNet.hpp  ImageNetTags.hpp  MTCNN.hpp  MTCNNFaceNet.hpp  SCRFD.hpp  SCRFDFaceNet.hpp  StyleTransfer.hpp
models/: efficientnet_b0.param  efficientnet_b0_fp16.param
models/include/: efficientnet_b0_fp16.bin.h  efficientnet_b0_fp16.id.h  mobilefacenet.mem.h  mobilenet_v3.id.h  mobilenet_v3.mem.h  scrfd.bin.h  scrfd.id.h  scrfd.mem.h
python/: PyAibum.cpp
src/: FaceNet.cpp  ImageNet.cpp  MTCNN.cpp  SCRFD.cpp  StyleTransfer.cpp  Util.hpp
test/: class.cpp  face.cpp  face_cmp.cpp  style.cpp
wasm/: aibum_core_wasm.cpp  aligned_allocator.hpp  worker.hpp
wasm/dep/ncnn/basic/include/ncnn/: platform.h
wasm/dep/ncnn/basic/lib/cmake/ncnn/: ncnn.cmake
wasm/dep/ncnn/include/ncnn/: platform.h
wasm/dep/ncnn/simd-threads/include/ncnn/: platform.h
wasm/dep/ncnn/threads/lib/cmake/ncnn/: ncnn.cmake
